<resources>
    <string name="app_name">Navigation View</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="view_cart">Cart</string>
    <string name="scan">Scan</string>
    <string name="product_id">Product Id: </string>
    <string name="product_desc">Product Description: </string>
    <string name="product_price">Product Price: </string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="scan_more">Scan More</string>
    <string name="Pay">Pay</string>
</resources>
