<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <Button
        android:id="@+id/view_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_cart"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@layout/round_shape"
        android:textColor="#FFF" />


    <Button android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/scan"
        android:layout_toRightOf="@id/view_cart"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:background="@layout/round_shape"
        android:textColor="#FFF" />


    <TextView
        android:id="@+id/product_id"
        android:text="@string/product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_cart"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"/>
    <TextView
        android:id="@+id/inputId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/product_id"
        android:padding="4dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/product_desc"
        android:text="@string/product_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputId"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"/>
    <TextView
        android:id="@+id/e2"
        android:textIsSelectable="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_desc"
        android:padding="4dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/product_price"
        android:text="@string/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/e2"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"/>
    <TextView
        android:id="@+id/e3"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_price"
        android:padding="4dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/add"
        android:background="@layout/round_shape"
        android:layout_below="@id/e3"
        android:textColor="#FFF" />


    <Button android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:text="@string/cancel"
        android:background="@layout/round_shape"
        android:layout_below="@id/e3"
        android:layout_toRightOf="@id/add_button"
        android:textColor="#FFF" />


</RelativeLayout>
